[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/Sprites/Cell.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Cell.gd" type="Script" id=2]
[ext_resource path="res://Audio/Effects/Hit.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 11.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1.533 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "float"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1.533 ), Vector2( 0, 0 ), Vector2( 0, 1.507 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.5, 13 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 0.5, 13 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9, 13 )

[sub_resource type="Animation" id=7]
resource_name = "Flash"
length = 0.8
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 )
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Cell" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 131
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1.533 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/float = SubResource( 3 )

[node name="left" type="Area2D" parent="."]
position = Vector2( -9, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2( -0.5, 3 )
shape = SubResource( 4 )

[node name="right" type="Area2D" parent="."]
position = Vector2( 9, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2( 0.5, 3 )
shape = SubResource( 5 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 384
collision_mask = 384

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 1 )
shape = SubResource( 6 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="body_exited" from="left" to="." method="_on_left_body_exited"]
[connection signal="body_exited" from="right" to="." method="_on_right_body_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
